# industrial-data-bridge

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-edge.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
docker/: Dockerfile  Dockerfile.edge  Dockerfile.gateway  influxdb-init.sh  init-postgres.sql  mosquitto.conf  prometheus.yml
docker/grafana/provisioning/: dashboards.yml  datasources.yml
docs/: AI.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  PROTOCOLS.md
examples/dashboard/: example.py
examples/modbus_plc/: example.py
examples/mqtt_gateway/: example.py
examples/opcua_server/: config.yaml  example.py
examples/predictive_maintenance/: example.py
scripts/: diagnose.py  init_db.py  setup.sh
src/: __init__.py  main.py
src/ai/: __init__.py  anomaly_predictive.py
src/core/: __init__.py  config.py  engine.py
src/edge/: __init__.py  agent.py
src/protocols/: __init__.py  base.py  http_adapter.py  modbus_adapter.py  mqtt_adapter.py  opcua_adapter.py
src/utils/: __init__.py  config.py  data_normalizer.py  database.py  logging.py  redis_client.py  serializer.py
src/web/: __init__.py  app.py  routes.py
tests/: __init__.py  test_ai.py  test_core.py  test_modbus.py  test_normalizer.py  test_web.py
